apiKey, contextKey. fetch data

--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    
 }
 
 .logo {
@@ -12,10 +13,14 @@
 
 .home__header {
     display: flex;
-    padding: 20px 30px;
+    
     margin-bottom: 150px;
     justify-content: space-between;
     color: #555555;
+}
+
+.home__body {
+    text-align: center;
 }
 
 .home__header a {
@@ -24,7 +29,9 @@
     color: #555555;
 }
 
-.home__headerRight {
+.home__headerRight,
+.home__headerLeft
+ {
     display: flex;
     align-items: center;
 }
@@ -52,61 +59,3 @@ a:visited {
     color: inherit;
 }
 
-
-
-.search__input {
-    display: flex;
-    align-items: center;
-    margin: 0 auto;
-    border: 1px solid #dfe1e5;
-    padding: 0 18px;
-    height: 44px;
-    border-radius: 40px;
-    max-width: 500px;
-}
-
-.search__input input {
-    /* width: 100%; */
-    flex: 1;
-    padding: 10px 20px;
-    border: none;
-    font-size: medium;
-}
-.search__input:hover {
-    box-shadow: 0 1px 6px rgba(32,33,36,0.28);
-    border-color: rgba(223,225,229,0);
-}
-
-input:focus {
-    outline: none;
-}
-.search__input svg {
-    color: #9aa0a6;
-}
-
-/* .search-field input {
-    border-radius: 40px;
-    border: 1px solid #ccc;
-    width: 100%;
-    max-width: 500px;
-    padding: 15px 20px;
-} */
-.search__buttons {
-    margin: 30px 0;
-}
-
-.search__buttons .btn {
-    margin: 0 10px;
-    padding: 8px 22px;
-    border: 1px solid transparent;
-    /* border-radius: 5px;  */
-    text-transform: none;
-    background: #f2f2f2;
-    
-}
-
-
-.search__buttons .btn:hover {
-    background: #f2f2f2;
-    border: 1px solid #ccc;
-}
