--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
 /* @import '~material-ui/core/styles'; */
 
 .app {
-  text-align: center;
+  /* text-align: center; */
+  padding: 20px 30px;
 }
 
+.page {
+  
+}
